--- a/.github/workflows/staging-build-push-db.yml
+++ b/.github/workflows/staging-build-push-db.yml
@@ -1,4 +1,4 @@
-name: Build and Push db container [production]
+name: Build and Push db container [Staging]
 
 on:
   workflow_call:
@@ -16,7 +16,7 @@ jobs:
 
       - name: Decode .env from GitHub Secrets and set environment variables
         run: |
-          echo "${{ secrets.ENV }}" | base64 --decode > .env
+          echo "${{ secrets.ENV_STAGING }}" | base64 --decode > .env
 
           while IFS='=' read -r key value; do
             if [[ ! -z "$key" && ! "$key" =~ ^# ]]; then
