--- a/infra/docker/nginx/Dockerfile
+++ b/infra/docker/nginx/Dockerfile
@@ -28,6 +28,9 @@ EOF
 FROM base AS local
 
 COPY ./infra/docker/nginx/default.local.conf /etc/nginx/conf.d/default.conf
+COPY ./infra/docker/nginx/nginx.local.conf /etc/nginx/nginx.conf
+
+USER nginx
 
 # ====================================
 # production
@@ -35,6 +38,7 @@ COPY ./infra/docker/nginx/default.local.conf /etc/nginx/conf.d/default.conf
 FROM base AS production
 
 COPY ./infra/docker/nginx/default.conf /etc/nginx/conf.d/default.conf
+COPY ./infra/docker/nginx/nginx.production.conf /etc/nginx/nginx.conf
 
 USER nginx
 
@@ -44,5 +48,6 @@ USER nginx
 FROM production AS staging
 
 COPY ./infra/docker/nginx/default.staging.conf /etc/nginx/conf.d/default.conf
+COPY ./infra/docker/nginx/nginx.staging.conf /etc/nginx/nginx.conf
 
 USER nginx
