--- a/compose.staging.yml
+++ b/compose.staging.yml
@@ -3,6 +3,11 @@ volumes:
   storage:
   build:
 
+networks:
+  internal:
+  webnet:
+    external: true
+
 services:
   app:
     image: ${DOCKER_USERNAME}/${APP_NAME}-app-${ENV}:${VERSION}
@@ -12,19 +17,31 @@ services:
       - ./src/.env:/var/www/src/.env
       - storage:/var/www/src/storage/app/public
       - build:/var/www/src/public
+    networks:
+      - internal
 
   web:
     image: ${DOCKER_USERNAME}/${APP_NAME}-web-${ENV}:${VERSION}
     container_name: ${APP_NAME}-web-${ENV}
-    ports:
-      - ${WEB_PORT}:80
-      - ${SSL_PORT}:443
+    labels:
+      - "traefik.enable=true"
+      - "traefik.docker.network=webnet"
+      - "traefik.http.routers.staging-web.entrypoints=websecure"
+      - "traefik.http.routers.staging-web.rule=Host(`staging.cfcrating.com`)"
+      - "traefik.http.routers.staging-web.tls=true"
+      - "traefik.http.routers.staging-web.tls.certresolver=myresolver"
+      - "traefik.http.services.staging-web.loadbalancer.server.port=80"
     volumes:
-      - /etc/letsencrypt:/etc/letsencrypt
       - storage:/var/www/src/storage/app/public
       - build:/var/www/src/public
+    expose:
+      - "80"
+    networks:
+      - webnet
+      - internal
     depends_on:
       - app
+    restart: always
 
   db:
     image: ${DOCKER_USERNAME}/${APP_NAME}-db-${ENV}:${VERSION}
@@ -40,6 +57,8 @@ services:
       - MYSQL_USER=${DB_USER}
       - MYSQL_PASSWORD=${DB_PASS}
       - MYSQL_ROOT_PASSWORD=${DB_PASS}
+    networks:
+      - internal
 
   scheduler:
     image: ${DOCKER_USERNAME}/${APP_NAME}-app-${ENV}:${VERSION}
