--- a/proxy/compose.yml
+++ b/proxy/compose.yml
@@ -1,40 +1,27 @@
 services:
-  nginx-proxy:
-    image: jwilder/nginx-proxy
-    container_name: nginx-proxy
+  traefik:
+    image: traefik:v3.3
+    container_name: traefik
     ports:
-      - "${WEB_PORT}:80"
-      - "${SSL_PORT}:443"
+      - "80:80"
+      - "443:443"
+    command:
+      - --providers.docker=true
+      - --providers.docker.exposedByDefault=false
+      - --entryPoints.web.address=:80
+      - --entryPoints.websecure.address=:443
+      - --certificatesresolvers.myresolver.acme.tlschallenge=true
+      - --certificatesresolvers.myresolver.acme.email=${EMAIL}
+      - --certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json
+      - --entrypoints.web.http.redirections.entryPoint.to=websecure
+      - --entrypoints.web.http.redirections.entryPoint.scheme=https
     volumes:
-      - certs:/etc/nginx/certs:ro
-      - html:/usr/share/nginx/html
-      - /var/run/docker.sock:/tmp/docker.sock:ro
-    networks:
-      - proxy
-    restart: always
-
-  acme-companion:
-    image: nginxproxy/acme-companion
-    container_name: acme-companion
-    environment:
-      - DEFAULT_EMAIL=${EMAIL}
-      - NGINX_PROXY_CONTAINER=nginx-proxy
-    depends_on:
-      - nginx-proxy
-    volumes:
-      - certs:/etc/nginx/certs:rw
-      - html:/usr/share/nginx/html
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - acme:/etc/acme.sh
+      - ./letsencrypt:/letsencrypt
     networks:
-      - proxy
+      - webnet
     restart: always
 
 networks:
-  proxy:
+  webnet:
     external: true
-   
-volumes:
-  certs:
-  html:
-  acme:
