--- a/compose.yml
+++ b/compose.yml
@@ -1,42 +1,1 @@
-volumes:
-  db-store:
-  storage:
-
-services:
-  app:
-    image: ${DOCKER_USERNAME}/${APP_NAME}-app-${ENV}:${VERSION}
-    container_name: ${APP_NAME}-app-${ENV}
-    user: "${UID}:${GID}"
-    volumes:
-      - ./src/.env:/var/www/src/.env
-      - storage:/var/www/src/storage
-      - ./src/public:/var/www/src/public
-    command: ["./copy-public.sh"]
-
-  web:
-    image: ${DOCKER_USERNAME}/${APP_NAME}-web-${ENV}:${VERSION}
-    container_name: ${APP_NAME}-web-${ENV}
-    ports:
-      - ${WEB_PORT}:80
-      - ${SSL_PORT}:443
-    volumes:
-      - /etc/letsencrypt:/etc/letsencrypt
-      - storage:/var/www/src/storage
-      - ./src/public:/var/www/src/public
-    depends_on:
-      - app
-
-  db:
-    image: ${DOCKER_USERNAME}/${APP_NAME}-db-${ENV}:${VERSION}
-    container_name: ${APP_NAME}-db-${ENV}
-    ports:
-      - ${DB_PORT}:3306
-    volumes:
-      - type: volume
-        source: db-store
-        target: /var/lib/mysql
-    environment:
-      - MYSQL_DATABASE=${DB_NAME}
-      - MYSQL_USER=${DB_USER}
-      - MYSQL_PASSWORD=${DB_PASS}
-      - MYSQL_ROOT_PASSWORD=${DB_PASS}
+compose.local.yml
