feat: faviconを追加する

--- a/.github/workflows/staging-build-push-app.yml
+++ b/.github/workflows/staging-build-push-app.yml
@@ -1,4 +1,4 @@
-name: Build and Push app container [Staging]
+name: Build and Push app container
 
 on:
   workflow_call:
@@ -88,4 +88,4 @@ jobs:
             cd /opt/staging
 
             make down
-            make rm-public-volume
+            make rm-build
