--- a/compose.yml
+++ b/compose.yml
@@ -1,7 +1,9 @@
 volumes:
   db-store:
   storage:
-  build:
+  public:
+  favicon:
+    external: true
 
 networks:
   internal:
@@ -16,7 +18,8 @@ services:
     volumes:
       - ./src/.env:/var/www/src/.env
       - storage:/var/www/src/storage/app/public
-      - build:/var/www/src/public
+      - public:/var/www/src/public
+      - favicon:/var/www/src/public/favicon
     networks:
       - internal
 
@@ -33,7 +36,8 @@ services:
       - "traefik.http.services.production-web.loadbalancer.server.port=80"
     volumes:
       - storage:/var/www/src/storage/app/public
-      - build:/var/www/src/public
+      - public:/var/www/src/public
+      - favicon:/var/www/src/public/favicon
     expose:
       - "80"
     networks:
