--- a/infra/docker/nginx/default.local.conf
+++ b/infra/docker/nginx/default.local.conf
@@ -11,11 +11,15 @@ server {
 
     charset utf-8;
 
+    types {
+        image/svg+xml svg svgz;
+    }
+
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
-    location = /favicon.ico { access_log off; log_not_found off; }
+    location = /favicon/ { access_log off; log_not_found off; }
     location = /robots.txt  { access_log off; log_not_found off; }
 
     error_page 404 /index.php;
