--- a/infra/docker/nginx/default.staging.conf
+++ b/infra/docker/nginx/default.staging.conf
@@ -6,7 +6,11 @@ server {
     index index.php;
     charset utf-8;
 
-    location = /favicon.ico { access_log off; log_not_found off; }
+    types {
+        image/svg+xml svg svgz;
+    }
+
+    location = /favicon/ { access_log off; log_not_found off; }
     location = /robots.txt  { access_log off; log_not_found off; }
 
     error_page 404 /index.php;
