--- a/infra/docker/nginx/default.local.conf
+++ b/infra/docker/nginx/default.local.conf
@@ -11,11 +11,10 @@ server {
 
     charset utf-8;
 
-    types {
-        image/svg+xml svg svgz;
-    }
-
     location / {
+        auth_basic "Restricted Area";
+        auth_basic_user_file /etc/nginx/.htpasswd;
+        
         try_files $uri $uri/ /index.php?$query_string;
     }
 
