--- a/infra/docker/nginx/default.staging.conf
+++ b/infra/docker/nginx/default.staging.conf
@@ -35,6 +35,9 @@ server {
     }
 
     location / {
+        auth_basic "Restricted Area";
+        auth_basic_user_file /etc/nginx/.htpasswd;
+        
         try_files $uri $uri/ /index.php?$query_string;
     }
 }
