--- a/.github/workflows/production-build-push-app.yml
+++ b/.github/workflows/production-build-push-app.yml
@@ -20,7 +20,7 @@ jobs:
             assets:
               - 'src/resources/js/**'
               - 'src/resources/css/**'
-  
+
   build_and_push:
     needs: detect_changes
     runs-on: ubuntu-latest
@@ -51,7 +51,7 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-  
+
       - name: Log in to Github container registry
         uses: docker/login-action@v3
         with:
@@ -64,18 +64,18 @@ jobs:
         with:
           context: .
           file: ${{ env.DOCKERFILE_PATH_APP }}
-          target: ${{ env.ENV }}
+          target: production
           build-args: |
             GID=${{ env.GID }}
             UID=${{ env.UID }}
             USER_NAME=${{ env.USER_NAME }}
           push: true
           tags: |
-            ${{ env.DOCKER_USERNAME }}/cfcrating-app-${{ env.ENV }}:${{ env.VERSION }}
-            ghcr.io/${{ env.DOCKER_USERNAME }}/cfcrating-app-${{ env.ENV }}:cache
+            ${{ env.DOCKER_USERNAME }}/cfcrating-app-production:${{ env.VERSION }}
+            ghcr.io/${{ github.repository_owner }}/cfcrating-app-production:cache
           cache-from: |
-            type=registry,ref=ghcr.io/${{ env.DOCKER_USERNAME }}/cfcrating-app-${{ env.ENV }}:cache
-          cache-to: type=registry,ref=ghcr.io/${{ env.DOCKER_USERNAME }}/cfcrating-app-${{ env.ENV }}:cache,mode=max
+            type=registry,ref=ghcr.io/${{ github.repository_owner }}/cfcrating-app-production:cache
+          cache-to: type=registry,ref=ghcr.io/${{ github.repository_owner }}/cfcrating-app-production:cache,mode=max
 
       - name: remove public volume
         if: needs.detect_changes.outputs.assets_changed == 'true'
